# acesanderson.github.io

./: .gitignore  CNAME  PROJECT.md  _config.yml  index.md  manifest.md  pyproject.toml  scratchpad.md  v2.md
.claude/: settings.local.json
.github/workflows/: pages.yml
_posts/: 2024-06-03-embedding-benchmarks-lie.md  2025-11-14-mcp-is-wrong-tool-for-personal-projects.md  2026-03-02-hello-world.md  2026-03-04-why-i-built-conduit.md  2026-03-05-the-skill-is-the-eval.md  2026-03-07-prompts-are-parameters.md  2026-07-15-own-your-llm-stack.md
context/: chain-project-history.md  conduit-project-history.md  jekyll-github-pages-tutorial.md  post-candidates.md  research-skills-v2-evals.md
deslop/: deslop.py
docs/: github-pages.md
drafts/: 2026-03-04-why-i-built-conduit.md  2026-03-05-the-skill-is-the-eval.md  current-state-pattern-for-llm-chatbots.md  llm-stack-2026-beats.md  llm-stack-2026-braindump.md  llm-stack-2026-guideline.md  llm-stack-2026-research.md  mcp-is-wrong-tool-for-personal-projects.md  observable-llm-pipelines.md  poignancy.md  why-i-rewrote-langchain.md
src/blog/: __main__.py
tasks/: revise-skill-is-the-eval.md
